# drf-b2b-broker

./: .env.example  .envrc.example  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yml  justfile  pyproject.toml  ruff.toml
src/api/: urls.py
src/api/v1/: urls.py
src/api/v1/finances/: filters.py  serializers.py  urls.py  views.py
src/api/v1/finances/tests/: test_api.py
src/config/: urls.py
src/config/settings/: __init__.py  base.py  dev.py  prod.py  testing.py
src/models/finances/: admin.py  apps.py  models.py  querysets.py
src/models/finances/management/commands/: generate_data.py
src/models/finances/migrations/: 0001_initial.py
src/models/finances/tests/: factories.py  test_models.py
src/models/finances/tests/pgbench_queries/: tx-insert.sql  tx-select.sql  wallet-insert.sql  wallet-select.sql
src/models/users/: admin.py  apps.py  models.py
src/models/users/migrations/: 0001_initial.py
src/models/users/tests/: factories.py  test_models.py
